# story-generator

./: .gitignore  Cargo.toml  README.md  index.html  validation_algorithm_prototype.ipynb
docs/: .rustc_info.json
docs/debug/.fingerprint/cfg-if-6b41db08e56f71ee/: lib-cfg-if  lib-cfg-if.json
docs/debug/.fingerprint/getrandom-b9d0ecaa9f529486/: lib-getrandom  lib-getrandom.json
docs/debug/.fingerprint/ppv-lite86-6b69f8473dd5b89f/: lib-ppv-lite86  lib-ppv-lite86.json
docs/debug/.fingerprint/rand-8c040af62fe17afa/: lib-rand  lib-rand.json
docs/debug/.fingerprint/rand_chacha-57ee0d47a3c7e601/: lib-rand_chacha  lib-rand_chacha.json
docs/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/doc/story_gen/: all.html  fn.convert_sentences_to_paragraphs.html  fn.parse_file.html  fn.parse_right_hand_side.html  fn.process_rhs_optional_combinations.html  fn.run.html  index.html  sidebar-items.js  struct.Combinations.html  struct.Config.html  struct.Rule.html
docs/doc/story_graph/: all.html  fn.convert_sentences_to_paragraphs.html  fn.parse_file.html  fn.parse_right_hand_side.html  fn.process_rhs_optional_combinations.html  fn.run.html  index.html  struct.Combinations.html  struct.Config.html  struct.Rule.html
examples/: advanced.txt  basic.txt  basic_optional.txt  complex.txt  extra.txt  optional.txt  optional_advanced.txt  optional_simple.txt  simple.txt
src/: grammar.rs  lib.rs  main.rs  random.rs  utils.rs
src/components/: actor.rs  location.rs  world.rs
src/grammar/: grammar.rs  sentence.rs
src/grammar/noun/: noun.rs
(+38 files in other folders)
